# STE-benchmark

./: Cargo.toml  README.md  benchmark_data_grouped.csv  extract_bench.py
benches/: benchmark.rs
src/: Silent_threshold_enc.rs  lib.rs
