[package]
name = "coprocessor-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# STE:
criterion = { version = "0.5.0", features = ["html_reports"] }
ark-std = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.8.4" }
silent-threshold-encryption = { git = "https://github.com/m-pandey5/Silent_Threshold_Encryption.git", branch ="master"}
rayon = "1.10.0"

[[bench]]
name = "benchmark"
harness = false

